20170514:
- update: configure update for latest cygwin
- fix: detect missing md5.h in configure
- enhancement: adjust some messages to avoid line-wrapping
- enhancement: print status message to log if suppressed on console
- enhancement: also read config files in /etc and ${prefix}/etc
- enhancement: simplified memory conifguration detection scheme
- added an example config file, with documentation of all options
- added parameter StatusInterval
- fix for handling empty lines in config files
- fix: --append rejects existing files
- fix warnings related to thread status return code

20161115:
- enhancement: report percent done, when input size is known (is a file)
- enhancement: watchdog raises SIGKILL if SIGINT had no effect
- change: start watchdog when parsing option -W or after parsing all
          options when activated via defaults file
  => Originally the watchdog was started after output to make sure
     output initialization doesn't unintentionally trigger the watchdog
     due to delays with a manual setup on the receiving side in a
     network situation.
  => This behavior limits potential benefits when mbuffer is used in an 
     automated environment where output initialization might fail and
     the watchdog would be of use.
  => To avoid triggering the watchdog during network initialization, put
     the watchdog option -W after network options -O and -I.
- fix: use thread-safe mt_usleep instead of sleep(3) for watchdog timing
- change: adjusted interface of mt_usleep to accept 64bit arguments

20160613:
- fix: fix potential assertion triggered by interrupted system call
- enhancement: ignore EINTR for I/O syscalls

20160228:
- fix: fix listen's backlog argument, which can cause issues on Linux 4.4
  (patch by Matthijs van Drunen)

20151002:
- fix: SegV when argument to -v is missing
- fix: potential infinite loop on output error

20150412:
- fix: watchdog cannot do its job if it is cleaned up to early