@@ -1,4 +1,4 @@
-AC_INIT([mbuffer],[20170514])
+AC_INIT([mbuffer],[20170515])
 AC_CONFIG_HEADER([config.h])
 AC_CONFIG_SRCDIR([mbuffer.c])
 
